--- a/cell02/ex01/menu.css
+++ b/cell02/ex01/menu.css
@@ -3,7 +3,7 @@
     display: inline-block;
 }
 .dropdown button {
-    background-color: #3498db;
+    background-color: plum;
     color: white;
     padding: 10px;
     font-size: 16px;
@@ -14,13 +14,13 @@
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
+    min-width: 300px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 .dropdown-content a {
     color: black;
-    padding: 12px 16px;
+    padding: 12px 24px;
     text-decoration: none;
     display: block;
 }
@@ -32,4 +32,14 @@
 }
 .dropdown:hover button {
     background-color: #2980b9;
+}
+.photo-container {
+    display: flex;
+    justify-content: center; 
+    flex-wrap: wrap; 
+}
+img {
+    max-width: 90%;
+    height: auto;
+    margin: 10px;
 }
