--- a/rush/homepage.css
+++ b/rush/homepage.css
@@ -12,7 +12,7 @@ html, body {
     align-items: center;
     text-align: center;
     text-align: center;
-    height: 60vh; /* Half of the viewport height */
+    height: 60vh; 
 }
 .takonoop-content h1 {
     font-size: 50px;
@@ -25,7 +25,7 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 20vh; /* The remaining half of the viewport height */
+    height: 20vh; 
 }
 .profile {
     margin: 0 100px;
