--- a/rush/psansook.css
+++ b/rush/psansook.css
@@ -51,7 +51,7 @@ nav a {
     text-decoration: none;
 }
 #home {
-    margin-top:4rem;
+    margin-top: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -62,13 +62,11 @@ nav a {
 #home > * {
     text-align: center;
     font-size: 3em;
-    margin-top: 4rem;
 }
 .profile-picture { 
-    z-index: -1;
     width: 40vmin;
     height: 40vmin;
-    border-radius: 5em;
+    border-radius: 50%;
     margin-top: 50px;
 }
 #about {
